Spacing between buttons

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,6 +16,8 @@
 
         <ListView android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="@dimen/button_margin_bottom"
             android:id="@+id/listview_projects" />
 
     <!--
